--- a/bosh.yml
+++ b/bosh.yml
@@ -141,6 +141,10 @@ variables:
   type: password
 - name: postgres_password
   type: password
+- name: prometheus_bosh_secret
+  type: password
+- name: wise_rabbitmq_secret
+  type: password
 
 - name: default_ca
   type: certificate
