--- a/bosh.yml
+++ b/bosh.yml
@@ -3,9 +3,13 @@ name: bosh
 
 releases:
 - name: bosh
-  version: "264.7.0"
-  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-264.7.0-ubuntu-trusty-3468.21-20180125-031202-579399892-20180125031207.tgz?versionId=gnR.RVKDRH_Vk63jxsGBOhcHOZ9p8qCJ
-  sha1: 3850c68124bf5bce3cfb1433cce52e2d67741d94
+  version: "266.4.0"
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-266.4.0-ubuntu-trusty-3586.24-20180621-165809-30266228-20180621165813.tgz?versionId=inkSsUYxrlYaflh19kcwA7kYkF3eAHLh
+  sha1: 79ba3bdc160faff121e56ee5fd5f618ea48023ce
+- name: bpm
+  version: "0.6.0"
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bpm-0.6.0-ubuntu-trusty-3586.24-20180618-221823-499813904-20180618221841.tgz?versionId=4XxS3rY2PTiCJK2xTUTjLyS5Puk4ZKbX
+  sha1: 60bc10eb7f78b10e54c08913ca1820014562f51c
 
 resource_pools:
 - name: vms
@@ -27,13 +31,13 @@ networks:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
     static: [((internal_ip))]
-    dns: ((dns))
-    #dns: [8.8.8.8]
+    dns: [8.8.8.8]
 
 instance_groups:
 - name: bosh
   instances: 1
   jobs:
+  - {name: bpm, release: bpm}
   - {name: nats, release: bosh}
   - {name: postgres-9.4, release: bosh}
   - {name: blobstore, release: bosh}
@@ -45,6 +49,20 @@ instance_groups:
   - name: default
     static_ips: [((internal_ip))]
   properties:
+    agent:
+      mbus: nats://nats:((nats_password))@((internal_ip)):4222
+      env:
+        bosh:
+          blobstores:
+          - provider: dav
+            options:
+              # todo switch to using https
+              endpoint: http://((internal_ip)):25250
+              user: agent
+              password: ((blobstore_agent_password))
+              tls:
+                cert:
+                  ca: ((blobstore_ca.certificate))
     nats:
       address: ((internal_ip))
       user: nats
@@ -80,6 +98,11 @@ instance_groups:
       agent:
         user: agent
         password: ((blobstore_agent_password))
+      tls:
+        cert:
+          ca: ((blobstore_ca.certificate))
+          certificate: ((blobstore_server_tls.certificate))
+          private_key: ((blobstore_server_tls.private_key))
     director:
       address: 127.0.0.1
       name: ((director_name))
@@ -111,13 +134,11 @@ instance_groups:
         password: ((hm_password))
         ca_cert: ((director_ssl.ca))
       resurrector_enabled: true
-    ntp: &ntp ((ntp))
-    #- time1.google.com
-    #- time2.google.com
-    #- time3.google.com
-    #- time4.google.com
-    agent:
-      mbus: nats://nats:((nats_password))@((internal_ip)):4222
+    ntp: &ntp
+    - time1.google.com
+    - time2.google.com
+    - time3.google.com
+    - time4.google.com
 
 cloud_provider:
   mbus: https://mbus:((mbus_bootstrap_password))@((internal_ip)):6868
@@ -193,3 +214,16 @@ variables:
     common_name: default.hm.bosh-internal
     extended_key_usage:
     - client_auth
+
+- name: blobstore_ca
+  type: certificate
+  options:
+    is_ca: true
+    common_name: default.blobstore-ca.bosh-internal
+
+- name: blobstore_server_tls
+  type: certificate
+  options:
+    ca: blobstore_ca
+    common_name: ((internal_ip))
+    alternative_names: [((internal_ip))]
