--- a/uaa.yml
+++ b/uaa.yml
@@ -2,9 +2,9 @@
   path: /releases/-
   value:
     name: uaa
-    version: "52.7"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-52.7-ubuntu-trusty-3468.21-20180125-030551-413458231-20180125030557.tgz?versionId=9l0RRpWwtsIr7m2Im43Mr9pFl4zEa4tl
-    sha1: 75637c9d60773472ce0111743c7c16e43c6db997
+    version: "60"
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-60-ubuntu-trusty-3586.24-20180626-235737-955768119-20180626235749.tgz?versionId=FYd8djZY0Ti913cTYkFBw1EcfteGNcTzhtt
+    sha1: 6aaab8dd2bc1e30750b83bc557b3df4d4f911e9f
 
 # Switch Director to use UAA
 - type: replace
@@ -29,6 +29,11 @@
     name: uaa
     release: uaa
     properties:
+      encryption:
+        encryption_keys:
+        - label: uaa-encryption-key-1
+          passphrase: ((uaa_encryption_key_1))
+        active_key_label: uaa-encryption-key-1
       uaa:
         url: "https://((internal_ip)):8443"
         port: -1
@@ -46,7 +51,7 @@
           bosh_cli:
             override: true
             authorized-grant-types: password,refresh_token
-            scope: openid,bosh.admin,bosh.read,bosh.*.admin,bosh.*.read
+            scope: openid,bosh.admin,bosh.read,bosh.*.admin,bosh.*.read,bosh.teams.*.admin,bosh.teams.*.read
             authorities: uaa.none
             access-token-validity: 120 # 2 min
             refresh-token-validity: 86400 # 1 day
@@ -117,6 +122,12 @@
   path: /variables/-
   value:
     name: uaa_login_client_secret
+    type: password
+
+- type: replace
+  path: /variables/-
+  value:
+    name: uaa_encryption_key_1
     type: password
 
 - type: replace
