--- a/credhub.yml
+++ b/credhub.yml
@@ -3,7 +3,7 @@
   value:
     name: credhub
     version: "1.9.3"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/credhub-1.9.3-ubuntu-trusty-3586.24-20180618-221934-781997794-20180618221943.tgz?versionId=mHSM2jQnHSB5KE5AZMvscria7F47BLfs
+    url: file:///opt/spacex/wise-bosh/credhub-1.9.3-ubuntu-trusty-3586.24-20180618-221934-781997794-20180618221943.tgz
     sha1: ce5606206c6cd10b1cac6745537eeb5be8721182
 
 - type: replace
