--- a/uaa.yml
+++ b/uaa.yml
@@ -3,7 +3,7 @@
   value:
     name: uaa
     version: "60"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-60-ubuntu-trusty-3586.24-20180626-235737-955768119-20180626235749.tgz?versionId=FYd8djZY0Ti913cTYkFBw1EcfteGNcTzhtt
+    url: file:///opt/spacex/wise-bosh/uaa-60-ubuntu-trusty-3586.24-20180626-235737-955768119-20180626235749.tgz
     sha1: 6aaab8dd2bc1e30750b83bc557b3df4d4f911e9f
 
 # Switch Director to use UAA
