--- a/ci/compiled-releases/pipeline-3586.yml
+++ b/ci/compiled-releases/pipeline-3586.yml
@@ -1,4 +1,5 @@
 ---
+# resources {
 resources:
   - name: bosh-deployment
     type: git
@@ -59,6 +60,7 @@ resources:
     type: bosh-io-stemcell
     source:
       name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+      version_family: '3586.latest'
 
   # outputs
 
@@ -69,18 +71,16 @@ resources:
       access_key_id: ((aws_key_id))
       secret_access_key: ((aws_secret_access_key))
       regexp: ".*-(\\d+).tgz"
-
+# }
 jobs:
-  - name: compile-bosh-release-265
+  - name: compile-bosh-release-266
     plan:
       - aggregate:
         - get: bosh-deployment
         - get: bosh-release
           version:
-            version: "265.2.0"
+            version: "266.7.0"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -91,16 +91,14 @@ jobs:
         params:
           file: "compiled-release/*.tgz"
 
-  - name: compile-bosh-release-266
+  - name: compile-bosh-release-267
     plan:
       - aggregate:
         - get: bosh-deployment
         - get: bosh-release
           version:
-            version: "266.4.0"
+            version: "267.5.0"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -117,10 +115,8 @@ jobs:
           - get: bosh-deployment
           - get: uaa-release
             version:
-              version: "57"
+              version: "57.3"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -139,8 +135,6 @@ jobs:
             version:
               version: "59"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -151,6 +145,25 @@ jobs:
         params:
           file: "compiled-release/*.tgz"
 
+  - name: compile-uaa-release-60
+    plan:
+      - aggregate:
+          - get: bosh-deployment
+          - get: uaa-release
+            version:
+              version: "60.2"
+          - get: ubuntu-trusty-stemcell
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: uaa-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+
   - name: compile-credhub-release-1.8
     plan:
       - aggregate:
@@ -159,8 +172,6 @@ jobs:
           version:
             version: "1.8.3"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -179,8 +190,6 @@ jobs:
           version:
             version: "1.7.1"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -199,8 +208,6 @@ jobs:
           version:
             version: "1.9.3"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -219,8 +226,24 @@ jobs:
           version:
             version: "0.6.0"
         - get: ubuntu-trusty-stemcell
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-stemcell
+          release: bpm-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
+  - name: compile-bpm-release-0.9.0
+    plan:
+      - aggregate:
+        - get: bosh-deployment
+        - get: bpm-release
           version:
-            version: "3586.24"
+            version: "0.9.0"
+        - get: ubuntu-trusty-stemcell
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -239,8 +262,6 @@ jobs:
           version:
             version: "1.6.0"
         - get: ubuntu-trusty-stemcell
-          version:
-            version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -261,8 +282,6 @@ jobs:
             version:
               version: "40"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -281,8 +300,6 @@ jobs:
             version:
               version: "0.342.0"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -301,8 +318,6 @@ jobs:
             version:
               version: "1.9.4"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -321,8 +336,6 @@ jobs:
             version:
               version: "0.24.0"
           - get: ubuntu-trusty-stemcell
-            version:
-              version: "3586.24"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
