--- a/bbr.yml
+++ b/bbr.yml
@@ -1,14 +1,14 @@
-- type: replace
-  path: /releases/-
+- path: /releases/-
+  release: backup-and-restore-sdk
+  type: replace
   value:
     name: backup-and-restore-sdk
-    version: "1.7.0"
-    url: https://bosh.io/d/github.com/cloudfoundry-incubator/backup-and-restore-sdk-release?v=1.7.0
-    sha1: 5eca6d5b7942947ca7e6eaf84ebff79eb3f46a0e
-
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
+    sha1: e7c6fe3338565c5300ddc72eb565c9561e80eb6b
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/backup-and-restore-sdk-1.15.0-ubuntu-xenial-315.13-20190425-180542-451883416-20190425180608.tgz
+    version: 1.15.0
+- path: /instance_groups/name=bosh/jobs/-
+  type: replace
   value:
     name: database-backup-restorer
-    release: backup-and-restore-sdk
     properties: {}
+    release: backup-and-restore-sdk
