--- a/bosh-lite.yml
+++ b/bosh-lite.yml
@@ -1,95 +1,85 @@
-- type: replace
-  path: /releases/-
+- path: /releases/-
+  release: garden-runc
+  type: replace
+  value:
+    name: garden-runc
+    sha1: 0c6fa4f7a08c2adad20526731f241aedc7c42098
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-runc-1.16.3-ubuntu-xenial-315.13-20190425-174252-199879066-20190425174342.tgz
+    version: 1.16.3
+- path: /releases/-
+  release: bosh-warden-cpi
+  type: replace
   value:
     name: bosh-warden-cpi
+    sha1: dc33ec548d4a9181bf33c6abe5464d302e4887bf
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-warden-cpi-40-ubuntu-xenial-315.13-20190425-173105-170386703-20190425173111.tgz
     version: "40"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-warden-cpi-40-ubuntu-trusty-3586.24-20180618-221356-811088473-20180618221401.tgz?versionId=3KdTv5s2Fo.UXKnhq_u5hGe2XzW0xkNV
-    sha1: aee5be6e4405adbb1929c85f999a8e1dbfdf3726
-
-- type: replace
-  path: /releases/-
+- path: /instance_groups/name=bosh/jobs/-
+  type: replace
   value:
-    name: garden-linux
-    version: "0.342.0"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/garden-linux-0.342.0-ubuntu-trusty-3586.24-20180618-222419-036757477-20180618222425.tgz?versionId=1TsUe7YbgJPAIFUkyqkYyAnjV1lny.Vk
-    sha1: d9ca69b22e8dfe8ac5a033e7f3df10419ce9c4d2
-
-- type: replace
-  path: /releases/name=os-conf?
+    name: garden
+    release: garden-runc
+- path: /instance_groups/name=bosh/jobs/name=garden/properties?/garden
+  type: replace
   value:
-    name: os-conf
-    version: 18
-    url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=18
-    sha1: 78d79f08ff5001cc2a24f572837c7a9c59a0e796
-
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
+    allow_host_access: true
+    debug_listen_address: 127.0.0.1:17013
+    default_container_grace_time: 0
+    destroy_containers_on_start: true
+    graph_cleanup_threshold_in_mb: 0
+    listen_address: 127.0.0.1:7777
+    listen_network: tcp
+- path: /instance_groups/name=bosh/jobs/-
+  type: replace
   value:
     name: warden_cpi
     release: bosh-warden-cpi
-
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
+- path: /instance_groups/name=bosh/properties/director/cpi_job?
+  type: replace
+  value: warden_cpi
+- path: /instance_groups/name=bosh/properties/warden_cpi?
+  type: replace
   value:
-    name: garden
-    release: garden-linux
-
-- type: replace
-  path: /instance_groups/name=bosh/jobs/-
+    actions:
+      expand_stemcell_tarball: false
+    agent:
+      blobstore:
+        options:
+          endpoint: http://10.254.50.4:25250
+          password: ((blobstore_agent_password))
+          user: agent
+        provider: dav
+      mbus: nats://nats:((nats_password))@10.254.50.4:4222
+    host_ip: 10.254.50.4
+    warden:
+      connect_address: 127.0.0.1:7777
+      connect_network: tcp
+- path: /releases/name=os-conf?
+  type: replace
+  value:
+    name: os-conf
+    sha1: 78d79f08ff5001cc2a24f572837c7a9c59a0e796
+    url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=18
+    version: 18
+- path: /instance_groups/name=bosh/jobs/-
+  type: replace
   value:
     name: disable_agent
     release: os-conf
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/director/cpi_job?
-  value: warden_cpi
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/director/ignore_missing_gateway?
+- path: /instance_groups/name=bosh/properties/director/ignore_missing_gateway?
+  type: replace
   value: true
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/compiled_package_cache?
+- path: /instance_groups/name=bosh/properties/compiled_package_cache?
+  type: replace
   value:
+    options:
+      blobstore_path: /var/vcap/store/tmp/compiled_package_cache
     provider: local
-    options: {blobstore_path: /var/vcap/store/tmp/compiled_package_cache}
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/warden_cpi?
-  value:
-    host_ip: 10.254.50.4
-    warden:
-      connect_network: tcp
-      connect_address: 127.0.0.1:7777
-    agent: # todo remove once cpi dont know about these
-      mbus: nats://nats:((nats_password))@10.254.50.4:4222
-      blobstore:
-        provider: dav
-        options:
-          endpoint: http://10.254.50.4:25250
-          user: agent
-          password: ((blobstore_agent_password))
-
-- type: replace
-  path: /instance_groups/name=bosh/properties/garden?
-  value:
-    listen_network: tcp
-    listen_address: 127.0.0.1:7777
-    debug_listen_address: 127.0.0.1:17013
-    disk_quota_enabled: false
-    allow_host_access: true
-    destroy_containers_on_start: true # avoids snapshots
-    default_container_grace_time: 0
-    graph_cleanup_threshold_in_mb: 0
-
-- type: replace
-  path: /variables/name=nats_server_tls/options/alternative_names?/-
-  value: "10.254.50.4"
-
-- type: replace
-  path: /variables/name=blobstore_server_tls/options/alternative_names/-
-  value: "10.254.50.4"
-
-# Remove by virtualbox cpi to avoid compilation
-- type: remove
-  path: /instance_groups/name=bosh/jobs/name=virtualbox_cpi?
+- path: /variables/name=nats_server_tls/options/alternative_names?/-
+  type: replace
+  value: 10.254.50.4
+- path: /variables/name=blobstore_server_tls/options/alternative_names/-
+  type: replace
+  value: 10.254.50.4
+- path: /instance_groups/name=bosh/jobs/name=virtualbox_cpi?
+  type: remove
