--- a/jumpbox-user.yml
+++ b/jumpbox-user.yml
@@ -3,6 +3,7 @@
   value:
     name: os-conf
     version: 18
+    #url: https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=18
     url: file:///opt/spacex/wise-bosh/os-conf-release-18.tgz
     sha1: 78d79f08ff5001cc2a24f572837c7a9c59a0e796
 
