--- a/misc/blobstore-tls.yml
+++ b/misc/blobstore-tls.yml
@@ -1,3 +1,3 @@
-- type: replace
-  path: /instance_groups/name=bosh/properties/agent/env/bosh/blobstores/provider=dav/options/endpoint
-  value: https://((internal_ip)):25250
+# Blobstore TLS is now enabled by default
+# Keeping this ops-file for backwards compatibility
+---
