--- a/softlayer/cloud-config.yml
+++ b/softlayer/cloud-config.yml
@@ -1,26 +1,25 @@
 azs:
 - name: z1
   cloud_properties:
-    datacenter: { name: ((sl_datacenter)) }
+    datacenter: ((sl_datacenter))
 - name: z2
   cloud_properties:
-    datacenter: { name: ((sl_datacenter)) }
+    datacenter: ((sl_datacenter))
 - name: z3
   cloud_properties:
-    datacenter: { name: ((sl_datacenter)) }
+    datacenter: ((sl_datacenter))
 
 vm_types:
 - name: default
   cloud_properties:
-    bosh_ip: ((internal_ip))
-    startCpus:  4
-    maxMemory:  8192
-    ephemeralDiskSize: 100
-    hourlyBillingFlag: true
-    vmNamePrefix: ((sl_vm_name_prefix))
+    cpu:  4
+    memory:  8192
+    ephemeral_disk_size: 100
+    hourly_billing_flag: true
+    local_disk_flag: false
+    max_network_speed: 100
+    hostname_prefix: ((sl_vm_name_prefix))
     domain: ((sl_vm_domain))
-    datacenter:
-      name: ((sl_datacenter))
 
 disk_types:
 - name: default
@@ -40,6 +39,10 @@ networks:
     dns: [((internal_ip)), 8.8.8.8, 10.0.80.11, 10.0.80.12]
     static: ((internal_static_ips))
     reserved: ((internal_reserved_ips))
+    cloud_properties:
+      vlan_ids:
+      - ((sl_vlan_public))
+      - ((sl_vlan_private))
 
 - name: dynamic
   type: dynamic
@@ -47,12 +50,9 @@ networks:
   - dns: [((internal_ip)), 8.8.8.8, 10.0.80.11, 10.0.80.12]
     azs: [z1, z2, z3]
     cloud_properties:
-      PrimaryNetworkComponent:
-        NetworkVlan:
-          Id: ((sl_vlan_public))
-      PrimaryBackendNetworkComponent:
-        NetworkVlan:
-          Id: ((sl_vlan_private))
+      vlan_ids:
+      - ((sl_vlan_public))
+      - ((sl_vlan_private))
 
 compilation:
   workers: 5
